Fixing site-branding width on mobile browser

--- a/assets/sass/_structure.scss
+++ b/assets/sass/_structure.scss
@@ -489,7 +489,9 @@
 	    .nav-toggle-dropdown > ul{
 	        display: block !important;
 	    }
-
+		 .site-branding {
+			  width: 80%;
+		 }
 
     }
     #nav-toggle {
